5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4060/executions/1668_1390.log
== TEST (2019-04-15 19:08:56) 
-- CODE:
c=float(input("consumo de minutos: "))
tar=c*1.20

if(c<=100):
	print(tar)
else:
	print((c*1.40)+25)
 
-- OUTPUT:
60.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:11:26) 
-- CODE:
c=float(input("consumo de minutos: "))
tar=c*1.20
jur=(c*1.40)+25
if(c<=100):
	print(round(tar,2)
else:
	print(round(jur,2)
 
-- ERROR:
File "XXXX", line 6
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:11:52) 
-- CODE:
c=float(input("consumo de minutos: "))
tar=c*1.20
jur=(c*1.40)+25
if(c<=100):
	print(round(tar,2)
else:
	print(round(jur,2))
 
-- ERROR:
File "XXXX", line 6
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:12:01) 
-- CODE:
c=float(input("consumo de minutos: "))
tar=c*1.20
jur=(c*1.40)+25
if(c<=100):
	print(round(tar,2))
else:
	print(round(jur,2))
 
-- OUTPUT:
60.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:12:09) 
-- CODE:
c=float(input("consumo de minutos: "))
tar=c*1.20
jur=(c*1.40)+25
if(c<=100):
	print(round(tar,2))
else:
	print(round(jur,2))
 
-- EXECUTION TIME:
0.230704
-- TEST CASE 1:
---- input:
50
---- correct output:
60.0
---- user output:
60.0
-- TEST CASE 2:
---- input:
120
---- correct output:
193.0
---- user output:
193.0
-- TEST CASE 3:
---- input:
199

---- correct output:
303.6
---- user output:
303.6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
